# RoboticsMasters

./: Extension.sh  LOADER.sh  Packages.odt  README.md  ender.sh  starter.sh  thorvlad.rviz
CMP9767M-master/UOLBackup/uol_cmp9767m_base/rviz/: thorvlad.rviz
CMP9767M-master/catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
CMP9767M-master/catkin_ws/devel/etc/catkin/profile.d/: 90-uol_cmp9767m_base.sh
CMP9767M-master/catkin_ws/devel/include/dynamic_social_costmap/: SocialCostmapConfig.h
CMP9767M-master/catkin_ws/devel/include/face_detector/: FaceDetectorAction.h  FaceDetectorFeedback.h
CMP9767M-master/catkin_ws/devel/include/people_msgs/: PositionMeasurement.h
CMP9767M-master/catkin_ws/devel/include/velodyne_laserscan/: VelodyneLaserScanConfig.h
CMP9767M-master/catkin_ws/devel/include/velodyne_msgs/: VelodynePacket.h  VelodyneScan.h
CMP9767M-master/catkin_ws/devel/share/Ass1_1/cmake/: Ass1_1Config.cmake
CMP9767M-master/catkin_ws/devel/share/ass1_1/cmake/: ass1_1Config.cmake
CMP9767M-master/catkin_ws/devel/share/but_velodyne_proc/cmake/: but_velodyne_procConfig.cmake
CMP9767M-master/catkin_ws/src/ass1_1/: CMakeLists.txt  package.xml
CMP9767M-master/catkin_ws/src/ass1_1/config/: all_costmap_params.yaml  costmap_common_params.yaml  planners.yaml  scan_costmap_params.yaml
CMP9767M-master/catkin_ws/src/ass1_1/launch/: mapping.launch  vel_filt.launch
CMP9767M-master/catkin_ws/src/ass1_1/scripts/: hist.py  scanner.py  test.py  twister.py
CMP9767M-master/catkin_ws/src/but_velodyne_proc/launch/: laserscan_node.launch
CMP9767M-master/catkin_ws/src/uol_cmp9767m_base/launch/: thorvald-sim.launch
CMP9767M-master/catkin_ws/src/uol_cmp9767m_base/rviz/: thorvald.rviz
CMP9767M-master/catkin_ws/src/uol_cmp9767m_base/scripts/: sprayer.py
CMP9767M-master/catkin_ws/src/uol_cmp9767m_tutorial/config/: costmap_common_params.yaml  local_costmap_params.yaml  planners.yaml
CMP9767M-master/catkin_ws/src/uol_cmp9767m_tutorial/launch/: mapping.launch  move_base.launch
CMP9767M-master/gmapping/cmake/: gmappingConfig.cmake
Old_Versions/Maybe/: LOADER.sh  ender.sh  starter.sh
Old_Versions/Maybe/CMP9767M-master/catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
Old_Versions/Middle/CMP9767M-master/catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
Old_Versions/Middle/Packages-unused/pointcloud_to_laserscan-lunar-devel/launch/: sample_node.launch
Old_Versions/November/: .LOADER.sh.swp  README.md
Old_Versions/November/CMP9767M-master/catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
Packages-unused/uol_cmp9767m_tutorial/config/: planners.yaml
Packages-unused/velodyne_laserscan/cfg/: VelodyneLaserScan.cfg
Report/: Report.docx  ieee_paper_format.doc  ~$Report.docx  ~$ee_paper_format.doc  ~WRL0962.tmp
Scripts/: COMMIT.sh  Navigation.ods  ToDo
catkin_ws/devel/lib/pkgconfig/: Ass1_1.pc  ass1_1.pc
catkin_ws/devel/share/Ass1_1/cmake/: Ass1_1Config.cmake
catkin_ws/src/ass1_1/scripts/: test.py
catkin_ws/src/ass1_1/scripts/venv2/local/: bin  include  lib
src/: .rosinstall
src/RFID/: README.md
src/RFID/gazebo_rfid_node/: CMakeLists.txt  package.xml
src/RFID/gazebo_rfid_node/deleteMe/: WirelessReceiverPlugin.cc  WirelessReceiverPlugin.hh
src/RFID/gazebo_rfid_node/deleteMe/worlds/: ncfm_model_rfid.world  rfid.world  rfid2.world  uhf_rfid_test.world
src/RFID/gazebo_rfid_node/env-hooks/: 90.gazebo_models_rfid.sh.em
src/RFID/gazebo_rfid_node/include/wirelessNodeMonitor/: wirelessNodeMonitor.h
src/RFID/gazebo_rfid_node/launch/: demo.launch
src/RFID/gazebo_rfid_node/models/antenna/: antenna.scad  antenna.stl  ascii_antenna.stl  model.config  model.sdf
src/RFID/gazebo_rfid_node/models/tag/: model.config  model.sdf  tag.scad  tag.stl
src/RFID/gazebo_rfid_node/rviz/: gazebo_thorvald_rfid.rviz
src/RFID/gazebo_rfid_node/scripts/: spawn_model
src/RFID/gazebo_rfid_node/src/: wirelessNodeMonitor.cpp
src/RFID/gazebo_rfid_node/urdf/: tag_model.xacro
src/RFID/gazebo_rfid_node/urdf/sensor_modules/: sensor_frames_lincoln_rfid.xacro
src/RFID/pr_model/: CMakeLists.txt  package.xml
src/RFID/pr_model/launch/: tagData.launch
src/RFID/pr_model/srv/: get_prob.srv  queryModel.srv
src/RFID/reader/: install.sh  rfid_test.py  rfid_test_once.py
src/RFID/reader/src/lib/: libmercuryrfid.c
src/RFID/rfid_grid_map/: CMakeLists.txt  package.xml
src/RFID/rfid_grid_map/config/: FDG.yaml  FDG3.yaml  FDG_old.yaml  LCAS3.yaml  LCAS3_tiago.yaml  LCAS_red.yaml  ROBOSOFT3.yaml  SMH.yaml  SMH_tiago.yaml  custom_rosconsole.conf
src/RFID/rfid_grid_map/include/rfid_grid_map/: rfid_gridMap.hpp  rfid_gridMap2.hpp
src/RFID/rfid_grid_map/launch/: debug.launch  grid.launch  grid_debug.launch  grid_deploy.launch  grid_deploy.launch.orig  grid_visualization.launch  rfid_grid.launch  rfid_grid_REPLAY_FDG.launch  rfid_grid_REPLAY_FDG_Monday.launch  rfid_grid_REPLAY_FDG_Monday_deploy.launch  rfid_grid_debug_FDG.launch  rfid_grid_rviz.launch  rfid_grid_test_FDG_Tiago.launch  rfid_grid_test_PUMS2.launch  rfid_grid_test_UOL.launch  rfid_grid_test_UOL2.launch  rfid_grid_test_UOL_Tiago.launch  rfid_grid_test_biarritz.launch  rfid_grid_test_fdg.launch  rfid_grid_test_fdg_old.launch  rfid_grid_tiago.launch  temp.launch  temporal.launch  things.yaml
src/RFID/rfid_grid_map/rviz/: rfid_gridmap_test.rviz  rfid_gridmap_test_FDG.rviz  rfid_gridmap_test_PUMS.rviz  rfid_gridmap_tiago.rviz
src/RFID/rfid_grid_map/scripts/: tag_discovery_node.py
src/RFID/rfid_grid_map/src/: rfid_gridMap.cpp  rfid_gridMap2.cpp  rfid_grid_map_node2.cpp  viewZois.cpp
src/RFID/rfid_node/: CMakeLists.txt  package.xml
src/RFID/rfid_node/launch/: reader.launch
src/RFID/rfid_node/msg/: TagReading.msg
src/RFID/rfid_node/scripts/: readExample.py  renameExample.py
src/RFID/rol_server/: CMakeLists.txt  package.xml
src/RFID/rol_server/launch/: rol_server_node.launch
src/RFID/rol_server/scripts/: dataPlot.py  dataPlot_PUMs.py  playTag.py  prob_crawler.py  rol_server_node.py
src/RFID/rol_server/srv/: findObject.srv
(+155 files in other folders)
