<?xml version="1.0"?>
<package>
  <name>gazebo_rfid_node</name>
  <version>0.0.0</version>
  <description>The gazebo_rfid_node package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="mfernandezcarmona@lincoln.ac.uk">mfernandezcarmona</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rfid_node</build_depend>
  <build_depend>gazebo8</build_depend>
  <build_depend>roscpp</build_depend>


  <build_depend>gazebo_ros</build_depend>
  <build_depend>rasberry_move_base</build_depend>
  <build_depend>thorvald_base </build_depend>
  <build_depend>rasberry_bringup</build_depend>
  <build_depend>thorvald_description</build_depend>
  <build_depend>gazebo_worlds_oru</build_depend>
  <build_depend>fake_localization</build_depend>
  <build_depend>map_server</build_depend>
  <build_depend>robot_pose_publisher</build_depend>
  <build_depend>move_base</build_depend>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>rasberry_move_base</run_depend>
  <run_depend>thorvald_base </run_depend>
  <run_depend>rasberry_bringup</run_depend>
  <run_depend>thorvald_description</run_depend>
  <run_depend>gazebo_worlds_oru</run_depend>
  <run_depend>fake_localization</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>robot_pose_publisher</run_depend>
  <run_depend>move_base</run_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>rfid_node</run_depend>
  <run_depend>gazebo8</run_depend>

  <!-- The export tag contains other, unspecified, tags -->

  <export>
      <!-- gazebo_ros_paths_plugin automatically adds these to
          GAZEBO_PLUGIN_PATH and GAZEBO_MODEL_PATH when you do this export inside
          the package.xml file. You can than use URIs of type model://my_package/stuff. -->
      <gazebo_ros
          gazebo_plugin_path="${prefix}/lib"
          gazebo_model_path="${prefix}/.." />
  </export>

</package>
