<?xml version="1.0"?>
<package format="2">
  <name>ass1_1</name>
  <version>0.1.0</version>
  <description>The ass1_1 package</description>

  <maintainer email="13488071@students.lincoln.ac.uk">Jisha George</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <depend>robot_localization</depend> 
  <depend>amcl</depend> 
  <depend>fake_localization</depend> 
  <depend>carrot_planner</depend> 
  <depend>roslint</depend> 
  <depend>velodyne_laserscan</depend> 
  <depend>libcap-dev</depend>
  <depend>uol_cmp9767m_base</depend>
  <depend>uol_cmp9767m_tutorial</depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>

  </export>
</package>
